# make

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: exception.h  makefile-builder.h  makefile-parser.h  string-ops.h  task-graph.h  variables.h
src/: main.cpp  makefile-builder.cpp  makefile-parser.cpp  string-ops.cpp  task-graph.cpp  variables.cpp
tests/: build_cases  comment.mk  concurrency.mk  loop.mk  makefile-parser-tests.cpp  nameErr.mk  nameErr2.mk  overrideErr.mk  prereqVarErr.mk  qa.mk  recipeFirstErr.mk  run_build_tests  separatorErr.mk  string-ops-tests.cpp  targetErr.mk  targetVarErr.mk  task-graph-tests.cpp  test.mk  variables-tests.cpp
